# rail_graph

./: .clippy.toml  .dockerignore  .gitignore  10104.csv  12133.csv  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  Trunk.toml  aberdeen.rgproject  claude.md  console.txt  docker-compose.yml  dortmund.fpl  glasgow.rgproject  index.html  infra.rgproject  junctions.rgproject  lines.csv  run.sh  test.fpl
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feedback.md
.github/workflows/: ci.yml  deploy.yml  terraform.yml  test.yml
benches/: conflict_detection.rs
docs/: csv-import-guide.md
examples/: debug_autolayout.rs  debug_branches.rs  debug_graph_structure.rs  debug_manual_layout.rs  debug_nimby_import.rs  debug_passing_loops.rs  profile_conflicts.rs  profile_perf_rgproject.rs
scripts/: generate-manifest.sh
server/: Cargo.toml  main.rs
src/: conflict.rs  conflict_worker.rs  constants.rs  data.rs  geojson_worker.rs  geometry.rs  jtraingraph.rs  lib.rs  logging.rs  main.rs  models.rs  storage.rs  theme.rs  time.rs  train_journey.rs  utils.rs  worker_bridge.rs  worker_bridge_sync.rs
src/api/: changelog.rs  mod.rs
src/components/: _components.scss  add_station.rs  add_station.scss  add_station_quick.rs  alpha_disclaimer.rs  alpha_disclaimer.scss  app.rs  button.rs  canvas_controls_hint.rs  canvas_controls_hint.scss  canvas_viewport.rs  changelog_popup.rs  changelog_popup.scss  confirmation_dialog.rs  confirmation_dialog.scss  conflict_tooltip.rs  conflict_tooltip.scss  connect_to_station.rs  create_view_dialog.rs  create_view_dialog.scss  csv_column_mapper.rs  csv_column_mapper.scss  day_selector.rs  day_selector.scss  days_of_week_selector.rs  days_of_week_selector.scss  delete_folder_confirmation.rs  delete_station_confirmation.rs  delete_station_confirmation.scss  doubletrack_toggle.rs  dropdown_menu.rs  dropdown_menu.scss  duration_input.rs  edit_folder_dialog.rs  edit_junction.rs  edit_station.rs  edit_station.scss  edit_track.rs  edit_track.scss  error_list.rs  (+59 more)
src/components/graph_canvas/: canvas.rs  conflict_indicators.rs  conflicts.rs  graph_content.rs  junction_indicators.rs  mod.rs  station_labels.rs  time_labels.rs  time_scrubber.rs  train_journeys.rs  train_positions.rs  types.rs
src/components/infrastructure_canvas/: auto_layout.rs  hit_detection.rs  junction_renderer.rs  line_renderer.rs  line_station_renderer.rs  mod.rs  renderer.rs  station_renderer.rs  track_renderer.rs
src/components/line_editor/: _line_editor.scss  _schedule_tab.scss  _stops_tab.scss  auto_schedule_form.rs  empty_route_setup.rs  general_tab.rs  manual_departure_editor.rs  manual_departures_list.rs  mod.rs  platform_column.rs  platform_select.rs  schedule_tab.rs  station_select.rs  stop_row.rs  stops_tab.rs  time_column.rs  track_column.rs  wait_time_column.rs
src/conflict/: geometry.rs  mod.rs  platform.rs  segment.rs  types.rs
src/import/: csv.rs  geojson.rs  jtraingraph.rs  mod.rs  nimby.rs  shared.rs
src/models/: conflict.rs  days_of_week.rs  departure.rs  folder.rs  id.rs  junction.rs  keyboard_shortcuts.rs  line.rs  mod.rs  node.rs  project.rs  railway_graph.rs  segment_state.rs  station.rs  track.rs  train_journey.rs  undo.rs  user_settings.rs  view.rs
src/models/railway_graph/: junctions.rs  nodes.rs  routes.rs  stations.rs  tracks.rs
src/storage/: file.rs  idb.rs  indexeddb.rs  migrations.rs  mod.rs
src/storage/migrations/: v1_to_v2.rs
static/: service-worker.js  site.webmanifest  sw-register.js
style/: _mixins.scss  _variables.scss  main.scss
terraform/: main.tf  outputs.tf  variables.tf
test-data/: F6.csv  F7.csv  L7.csv  R70.csv  R71.csv  R75.csv  bergen.json  infra.csv
