[package]
name = "nimby_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Window", "Document", "Element", "DomRect", "MouseEvent"] }
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "conflict_detection"
harness = false
