[package]
name = "nimby_graph"
version = "0.1.0"
edition = "2021"

[lints.clippy]
complexity = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
pedantic = "warn"
unwrap_used = { level = "warn", priority = 1 }
implicit_hasher = { level = "allow", priority = 1 }
manual_midpoint = { level = "allow", priority = 1 }
float_cmp = { level = "allow", priority = 1 }

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
csv = "1.3"
petgraph = { version = "0.6", features = ["serde-1"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Window", "Document", "Element", "DomRect", "MouseEvent", "IdbFactory", "IdbDatabase", "IdbObjectStore", "IdbRequest", "IdbTransaction", "IdbTransactionMode", "IdbVersionChangeEvent", "IdbOpenDbRequest", "DomStringList", "HtmlInputElement", "File", "FileList", "FileReader", "Event"] }
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
uuid = { version = "1.0", features = ["v4", "js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

[[bench]]
name = "conflict_detection"
harness = false
