[workspace]
members = [".", "server"]

[package]
name = "nimby_graph"
version = "0.1.0"
edition = "2021"

[features]
# Enable console logging in release builds (enabled by default in debug builds)
console_logging = []

[lints.clippy]
complexity = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
pedantic = "warn"
unwrap_used = { level = "warn", priority = 1 }
implicit_hasher = { level = "allow", priority = 1 }
manual_midpoint = { level = "allow", priority = 1 }
float_cmp = { level = "allow", priority = 1 }

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos-use = "0.13"
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
rmp-serde = "1.3"
bincode = "1.3"
csv = "1.3"
quick-xml = { version = "0.37", features = ["serialize"] }
petgraph = { version = "0.6", features = ["serde-1"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "TextMetrics",
    "Window",
    "Document",
    "Element",
    "DomRect",
    "MouseEvent",
    "KeyboardEvent",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "IdbOpenDbRequest",
    "DomStringList",
    "HtmlInputElement",
    "File",
    "FileList",
    "FileReader",
    "Event",
    "Performance",
    "console",
    "Path2d",
    "Navigator",
    "StorageManager",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "Storage",
    "ServiceWorkerGlobalScope",
    "ExtendableEvent",
    "FetchEvent",
    "Cache",
    "CacheStorage",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ResponseInit",
    "ResponseType",
    "ServiceWorkerRegistration",
    "ServiceWorkerContainer",
    "Clients",
    "Headers",
] }
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-worker = "0.5"
console_error_panic_hook = "0.1"
uuid = { version = "1.0", features = ["v4", "js", "serde"] }
bitflags = { version = "2.4", features = ["serde"] }
pulldown-cmark = "0.12"
indexmap = { version = "2", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

[[bench]]
name = "conflict_detection"
harness = false

[package.metadata.leptos]
lib-profile-release = "wasm-release"
